--- a/2309.06374/Paper_Oct2023_test.tex
+++ b/2309.06374/Paper_Oct2023_test.tex
@@ -1,7 +1,6 @@
 
-
-
-\documentclass[letterpaper,11pt]{article}
+\documentclass[letterpaper,12pt]{article}
+\usepackage[noBBpl,sc]{mathpazo}
 
 %\documentclass[12pt]{article}
 %\documentclass[12pt,amssymb,amscd]{article}
@@ -20,7 +19,7 @@
 %\usepackage[active]{srcltx}
 %\usepackage[all]{xypic}
 %\usepackage[sorted-cites,alphabetic]{amsrefs}
-\usepackage{MnSymbol}
+%\usepackage{MnSymbol}
 \usepackage{slashed}
 \usepackage{amsthm}
 %\usepackage{palatino}
@@ -56,6 +55,50 @@
 \long\def\darkgreen#1{\textcolor {darkgreen}{#1}}
 %%%%%%%
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 
 
@@ -321,7 +364,7 @@ To do this we first construct a gauge-covariant metric on the configuration spac
 \newpage
 \tableofcontents
 
-
+\newpage
 
 
 \section{Introduction}
@@ -379,10 +422,10 @@ first, the construction of the metric relies on a gauge fixing procedure. This i
 
 
 
+\def\SO3{\mathop{\it SO}(3)}
 
 
-
-The philosophy behind this research project, which was first commenced in \cite{Aastrup:2005yk}, is to found a fundamental theory on the mathematics of empty space. A candidate for a fundamental theory must be highly irreducible in terms of further scientific reductions and the way to secure that is to base it on something that is conceptually almost empty. The construction that we propose depends primarily  on the $\mathbf{HD}$-algebra, which essentially encodes how 'stuff' is moved around in empty space, combined with a metric principle, and the choice of gauge group and dimension of space. Concerning the gauge group there are two natural choices: either $SO(3)$, which corresponds to Levi-Civita connections, or $SU(2)$, which corresponds to spin-connections. But the construction makes sense for a general gauge group $G$ that corresponds to gauge fields.
+The philosophy behind this research project, which was first commenced in \cite{Aastrup:2005yk}, is to found a fundamental theory on the mathematics of empty space. A candidate for a fundamental theory must be highly irreducible in terms of further scientific reductions and the way to secure that is to base it on something that is conceptually almost empty. The construction that we propose depends primarily  on the $\mathbf{HD}$-algebra, which essentially encodes how 'stuff' is moved around in empty space, combined with a metric principle, and the choice of gauge group and dimension of space. Concerning the gauge group there are two natural choices: either $\SO3$, which corresponds to Levi-Civita connections, or $SU(2)$, which corresponds to spin-connections. But the construction makes sense for a general gauge group $G$ that corresponds to gauge fields.
 
 This construction can be seen a natural continuation of Einstein's two theories of relativity: what we propose is a theory of relativity on a configuration space related to a three-dimensional manifold. In order to emphasise this we propose the name\footnote{We have previously used the term "quantum holonomy theory". We are indebted to Jarl Sidelmann for suggesting a better name.} 'configurational relativity'.
 
@@ -835,7 +878,7 @@ Therefore, in \cite{Aastrup:2018coc} we showed how the $\mathbf{HD}$-algebra can
  There are two issues with this construction that are worth noting: First there is no reason why it should preserve $T\cf$. This can however be fixed by taking $T\ca$ instead.
   The second issue is that it is not unitary, not even after multiplying with $(\Delta \exp_1) (x)$ like in (\ref{chopin1}). The reason is that the diffeomorphism $e^X$ in general does not act unitarily on the one-forms. However when the manifold $M$ is compact it is a bounded operator on $T\cf$. If we then extend it multiplicatively to  $\bigwedge^* T\cf $ it will not be a bounded operator anymore, only if we restrict $*$ to a finite set.
   
-  The second issue could be remedied by considering $\ca$ to be the space of $SO(3)$-connections on $TM$, or even better spin connections on $M$, since these also act isometrically on $TM$. Hence instead of letting the diffeomorphism $e^X$ act on the one-forms, we let $\mbox{Hol}(\gamma,\nabla)$ act also on the one-forms. This renders the action unitary. Note, however, that this would introduce a metric dependency in the representation. 
+  The second issue could be remedied by considering $\ca$ to be the space of $\SO3$-connections on $TM$, or even better spin connections on $M$, since these also act isometrically on $TM$. Hence instead of letting the diffeomorphism $e^X$ act on the one-forms, we let $\mbox{Hol}(\gamma,\nabla)$ act also on the one-forms. This renders the action unitary. Note, however, that this would introduce a metric dependency in the representation. 
  In general we do not see a major problem with a non-unitary representation of $\mathbf{HD}(M)$ that is bounded only on finite-particle states.
   
   
@@ -1800,7 +1843,7 @@ With respect to the Sobolev-type norm then it is interesting that it only plays 
 Concerning the dynamical ultra-violet regularisation, then this concept appears to be much more general than our current application: whenever there is an ultra-violet regularisation in a non-perturbative quantum gauge theory it must be dynamical if it is to be compatible with the gauge symmetry, and once it is dynamical it can be interpreted as a physical feature and not merely a computational artefact. What does this actually mean? It seems to suggest that there could be an anti-gravitational forcing that would not only put into question the necessity of quantising gravity but which could also have cosmological implications. If a regularisation can be interpreted as being physical (say, at the Planck scale), then it must play a role in for instance the black hole and big bang singularities. %Again: this seems to put into question whether it is necessary to quantise the metric field.
 
 
-The emergence of a dynamical metric on the underlying manifold $M$ is probably the most significant result i this paper. This result raises a few questions. First of all, will a four-dimensional metric emerge from this and if yes, what will the signature of that metric be? At the moment we have not been able to answer this question although it should be possible to do so with the information available. Another question comes from the dependency of the metric on $A$, which gives rise to the time-evolution. At the moment it is possible to have a static metric on $M$ (i.e. no $A$-dependency) with an arbitrary geometry. For instance, this is the case with the metrics we constructed in section 2 and 6. This is clearly not physically acceptable and thus one might wonder whether there exist a mechanism so that only the flat metric on $M$ can be static. One possible answer could be that the configuration space $\ca$ is a space of $SO(3)$ Levi-Civita connections.
+The emergence of a dynamical metric on the underlying manifold $M$ is probably the most significant result i this paper. This result raises a few questions. First of all, will a four-dimensional metric emerge from this and if yes, what will the signature of that metric be? At the moment we have not been able to answer this question although it should be possible to do so with the information available. Another question comes from the dependency of the metric on $A$, which gives rise to the time-evolution. At the moment it is possible to have a static metric on $M$ (i.e. no $A$-dependency) with an arbitrary geometry. For instance, this is the case with the metrics we constructed in section 2 and 6. This is clearly not physically acceptable and thus one might wonder whether there exist a mechanism so that only the flat metric on $M$ can be static. One possible answer could be that the configuration space $\ca$ is a space of $\SO3$ Levi-Civita connections.
 
 
 %A central idea in our approach is that a metric on the underlying manifold should emerge from the metric on the quotient space $\cf$. Unfortunately we have not yet been able to identify the exact mechanism by which this should happen. So far we have used a metric on the manifold $M$ to construct a metric on $\cf$, but ultimately this ordering of things should be turned upside down, so that we begin with a metric on $\cf$, that satisfies a number of basic requirements, and then seek to extract a metric on the manifold from that. One of the requirements that the metric on $\cf$ should fulfill would be that it gives rise to a spectral triple. This is necessary since we need the Dirac operator to generate time. If it is possible to extract a metric on the underlying manifold in this manner then two key questions needs to be answered. First, will the metric on $M$ be dynamical? And secondly, what will the signature of the emerging four-dimensional metric be? 
