--- a/2311.13644/main.tex
+++ b/2311.13644/main.tex
@@ -1,7 +1,14 @@
 %\documentclass[aps, pra, twocolumn,showpacs,superscriptaddress,groupedaddress, nofootinbib]{revtex4-2}
 
-\documentclass[a4paper,twocolumn,11pt,accepted=2024-02-14]{quantumarticle}
-\pdfoutput=1
+\documentclass[12pt]{article}
+
+
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.5in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
 \def \ICXCNIKA{\vskip 7mm
 \begin{picture}(0,0)
@@ -11,17 +18,14 @@
 \put(7,10){\line(3,-2){10}}
 \end{picture}\\}
 
-\pdfoutput=1
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
-\usepackage{hyperref}
 
 \bibliographystyle{quantum}
 
 %\bibliographystyle{apsrev4-2}
-\usepackage{hyperref}
 \usepackage{multirow}
 \usepackage{mathrsfs,amsmath} 
 \usepackage{verbatim}
@@ -65,23 +69,62 @@
 \newtheorem{lemma}{Lemma}
 \newtheorem{conj}{Conjecture}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 %\interfootnotelinepenalty=10000
 
 \begin{document}
-\title{Towards a measurement theory in QFT: ``Impossible" quantum measurements are possible but not ideal}
+\title{\Large Towards a measurement theory in QFT: ``Impossible" quantum measurements are possible but not ideal}
 %\title{What nonlocal quantum measurements are nonsignaling?}
 
-
-
-\author{Nicolas Gisin}
-\affiliation{Group of Applied Physics, University of Geneva, 1211 Geneva, Switzerland}
-\affiliation{Constructor University, Geneva, Switzerland}
-
-\author{Flavio Del Santo}
-\affiliation{Group of Applied Physics, University of Geneva, 1211 Geneva, Switzerland}
-\affiliation{Constructor University, Geneva, Switzerland}
+\author{Nicolas Gisin,
+Flavio Del Santo \\
+Group of Applied Physics\\ University of Geneva, 1211 Geneva, Switzerland\\
+Constructor University, Geneva, Switzerland}
 
 %\date{{21.~February  2041}}
+\date{21 Feb 2024}
+
+\maketitle
 
 \begin{abstract}
 \noindent 
@@ -91,7 +134,7 @@ lead to signaling between space-like separated regions. In QFT, these are known 
 
 \end{abstract}
 
-\maketitle
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -361,7 +404,7 @@ Finally, in the axiomatic approach to quantum theory based on property-lattices 
 
 
 
-\acknowledgements
+\section{acknowledgements}
 We thank Sandu Popescu, Daniel Collins, 
 Christopher Fewster, Tein van der Lugt, Kuntal Sengupta, Mirjam Weilenmann, and Pavel Sekatski for useful discussions and for pointing out relevant references. 
 This research was supported by the FWF (Austrian Science Fund) through an Erwin Schr\"odinger Fellowship (Project J 4699), and the Swiss National Science Foundation via the NCCR-SwissMap.
