--- a/2212.11082/hott-intro.tex
+++ b/2212.11082/hott-intro.tex
@@ -1,6 +1,6 @@
 \pdfoutput=1
 
-\documentclass[spanningrule,twoside]{cambridge7A}
+\documentclass[spanningrule]{cambridge7A}
 
 \title{Introduction to Homotopy Type Theory}
 \author{Egbert Rijke}
@@ -11,8 +11,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{fontawesome}
-\usepackage{newtxtext}
-\usepackage[vvarbb]{newtxmath} %new version of mathptmx
+\usepackage{newpxtext}
+\usepackage[vvarbb]{newpxmath} %new version of mathptmx
 \usepackage[final]{microtype}
 \usepackage{booktabs}
 \renewcommand{\arraystretch}{1.2}
@@ -49,6 +49,15 @@
 \usepackage[toc]{appendix}
 
 \usepackage[pdfpagelabels,colorlinks,citecolor=blue,linkcolor=blue,unicode,bookmarksopen=true,bookmarksopenlevel=2]{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
 \usepackage{aliascnt}
 
 \setcounter{tocdepth}{2}
@@ -96,6 +105,12 @@
 \crefname{quasidefn}{Quasi-definition}{Quasi-definitions}
 
 \input{hott}
+
+\input{../helpers/cmrsum}
+\usepackage[papersize={5.6in, 8.5in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% We configure the exercises
