--- a/2212.11082/hott-intro.tex
+++ b/2212.11082/hott-intro.tex
@@ -111,6 +111,7 @@
 \sloppy
 \raggedbottom
 \pagestyle{plain}
+\tikzset{>=Straight Barb, commutative diagrams/arrow style=tikz}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% We configure the exercises
