--- a/2212.11082/hott.tex
+++ b/2212.11082/hott.tex
@@ -1103,7 +1103,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Some tikz macros to typeset diagrams uniformly.
 
-\tikzcdset{arrow style=math font}
+%\tikzcdset{arrow style=math font}
 \tikzset{patharrow/.style={double,double equal sign distance,-,font=\scriptsize}}
 \tikzset{description/.style={fill=white,inner sep=2pt}}
 \tikzset{fib/.style={->>,font=\scriptsize}}
