--- a/2305.13506/Periods.tex
+++ b/2305.13506/Periods.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{article}
+\documentclass[12pt,a4paper]{article}
 \usepackage{jheppub}
 
 %\usepackage{fullpage}
@@ -17,6 +17,51 @@
 
 \usepackage[font=footnotesize]{subcaption}
 
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %\usepackage{xcolor}
 %\definecolor{darkgreen}{rgb}{0,.5,0}
@@ -106,17 +151,19 @@ We estimate the primitive contribution to the 18-loop beta function of the $O(N)
 
 
 \begin{document}
-	
+\pagestyle{empty}
+
 	
 	
 
 \maketitle
 
 
-%\newpage
+\pagestyle{empty}
 
-%\tableofcontents
-
+\tableofcontents
+\newpage
+\pagestyle{plain}
 
 \section{Introduction}\label{sec:introduction}
 
@@ -166,9 +213,9 @@ We estimate the primitive contribution to the 18-loop beta function of the $O(N)
 	For a more rigorous discussion of the convergence of   integrals and the precise dependence on angle variables, as well as alternative integral representations for the period, see \cite{bloch_motives_2006,schnetz_quantum_2010,brown_angles_2013}. The fact that the same coefficient describes the $\ln(s)$-dependence and the $\epsilon^{-1}$-pole is expected from the renormalization group \cite{wilson_renormalization_1974}. In $\phi^4$-theory, the period is known analytically for the infinite family of zigzag-graphs (\cref{zigzag_amplitude}), and hundreds of other graphs  \cite{broadhurst_knots_1995,schnetz_quantum_2010,brown_singlevalued_2015,panzer_analytic_2013,panzer_galois_2017,schnetz_numbers_2018,schnetz_hyperlogprocedures_2023}.
 	
 	For a  primitive  graph, renormalization merely amounts to subtraction of the pole term and --- depending on the scheme --- potentially finite terms of the unrenormalized amplitude. Crucially, renormalization can not alter the $s$-dependent part of the primitive amplitude because that would require an $s$-dependent, hence non-local, counterterm. Therefore, the renormalized integral of a primitive graph \cref{amplitude_period} has the form 
-	\begin{align}\label{amplitude_period_renormalized} 
-		\mathcal F_\ren (G) &=\Lambda \left(   - \period (G)\ln \left( \frac s {s_0}  \right)   +\text{finite terms depending on $\theta$, but not on $s$}   + \mathcal  O \left( \epsilon \right) \right).
-	\end{align}
+	\begin{multline}\label{amplitude_period_renormalized} 
+		\mathcal F_\ren (G) =\Lambda \biggl(   - \period (G)\ln \biggl( \frac s {s_0}  \biggl)   + \\ \text{ finite terms depending on $\theta$, but not on $s$ }   + \mathcal  O ( \epsilon ) \biggr).
+	\end{multline}
 	In particular, the period encodes the $s$-dependence at $s_0$ of \cref{amplitude_period_renormalized},
 	\begin{align}\label{period_derivative}
 		\frac{\partial}{\partial \ln (s)} \mathcal F_\ren (G) \Big|_{s=s_0} = -\Lambda \cdot \period(G).
@@ -197,6 +244,7 @@ We estimate the primitive contribution to the 18-loop beta function of the $O(N)
 
 
 \begin{table}[h]
+\small
 	\centering
 	\begin{tblr}{  vlines, 
 			hline{1}={solid},
@@ -468,6 +516,7 @@ The completion of a given decompletion is unique by construction. A given comple
 
 
 \begin{table}[htbp]
+\small
 	\centering
 \begin{tblr}{  vlines, 
 		hline{1}={solid},
@@ -720,6 +769,7 @@ Averages over decompletions are reported in \cref{tab:aut_planar}, note that the
 
 
 \begin{table}[htb]
+\small
 	\centering
 	\begin{tblr}{  vlines,  
 			vline{5}={1}{-}{solid},
@@ -841,6 +891,7 @@ We computed the symmetries as described for all completions with $L \leq 14$ loo
 
 
 \begin{table}[htbp]
+\small
 	\centering 
 		\begin{tblr}{  vlines, 
 				hline{1}={solid},
@@ -972,6 +1023,7 @@ An alternative measure for deviations from the mean are quantile boundaries. In 
 
 
 \begin{table}[htb]
+\small
 	\centering
 	\begin{tblr}{vlines,
 			hline{1}={solid},
@@ -980,8 +1032,8 @@ An alternative measure for deviations from the mean are quantile boundaries. In 
 			cells={font=\fontsize{10pt}{12pt}\selectfont },
 			columns={halign=r},
 			column{1}={halign=c,mode=math},
-			row{1}={halign=c,rowsep=2pt, font=\fontsize{12pt}{14pt}\selectfont, mode=math }, 
-			cell{1}{5}={font=\fontsize{11pt}{13pt}\selectfont }
+			row{1}={halign=c,rowsep=2pt, font=\fontsize{10pt}{12pt}\selectfont, mode=math }, 
+			cell{1}{5}={font=\fontsize{10pt}{12pt}\selectfont }
 		}
 			
 		L &   \left \langle \period  \right \rangle     &  \Delta_\text{num}  &  \Delta_\text{samp} &  [1\% ~; ~~99\%]   & C_2 & c_3 & c_4  \\
@@ -1345,6 +1397,7 @@ The fact that the $(1,2)$-circulants constitute the largest periods of each loop
 
 
 \begin{table}[htb]
+\small
 	\centering
 	\begin{tblr}{ width=\linewidth,hlines,rowsep=0pt,row{1}={rowsep=3pt}, colspec={|Q[r,m]|Q[l]|}, columns={m}
 		}
@@ -1734,7 +1787,7 @@ In the present work, we restrict ourselves to  primitive graphs.
 Their amplitude has the form \cref{amplitude_period}, and different renormalization schemes merely amount to adding finite constants. According to \cref{period_derivative}, the dependence on the logarithmic momentum is given, in all renormalization schemes, by the period. We redefine the coupling constant $\lambda\rightarrow g=\frac{\lambda}{(4\pi)^2}$ of the Lagrangian  in order to absorb the factor $\Lambda$ in \cref{period_derivative}. 
 We define a series expansion of the contribution of primitive graphs to the beta function according to
 \begin{align}\label{beta_expansion}
-	\beta^{\text{prim}}(N,g) :=   \sum_{L \geq 1} (-g)^{L+1} \beta^{\text{prim}}_{L}(N) := 2\sum_{ \substack{G \text{ primitive }\\ \text{compl.}}  } (-g)^{L_G+1}\cdot \frac{ 4!(L+2) \cdot 3T(G,N)\cdot \period (G)}{N(N+2)\abs{\Aut(G)}}.
+	\beta^{\text{prim}}(N,g) &:=   \sum_{L \geq 1} (-g)^{L+1} \beta^{\text{prim}}_{L}(N) \nonumber\\ &:=  2\sum_{ \substack{G \text{ primitive }\\ \text{compl.}}  } (-g)^{L_G+1}\cdot \frac{ 4!(L+2) \cdot 3T(G,N)\cdot \period (G)}{N(N+2)\abs{\Aut(G)}}.
 \end{align}
 Here, $\period(G)$ is the period \cref{def:period} and $T(G,N)$ is a polynomial in $N$ which encodes the the $O(N)$-symmetry of the completion, see \cref{TGN_decompletion}. The automorphism group $\Aut(G)$ has no fixed vertices and the sum is over all non-isomorphic completions, we include the factor $4!$ to reproduce the usual definition in physics as discussed in \cref{sec:automorphism}. As explained in \cref{sec:uniform_sampling}, we do not need to know the total number of graphs $N^{(C)}_L$, but only $N^{(\Aut)}_L$, to estimate the beta function from the \enquote{s}-samples. For the \enquote{$\star$}-samples, this is irrelevant as we know $N^{(C)}_L$ for $L\leq 16$ (\cref{tab:periods_count}).
 
@@ -2422,7 +2475,7 @@ S_\text{corr}:= \left \lbrace \abs{\Aut(G)}\text{ copies of }G \, \Big| G\in S \
 \end{align}
 $S_\text{corr}$ has uniform distribution and contains $N_\text{corr}=\sum_{g\in S}\abs{\Aut(g)}$ graphs, the mean is
 \begin{align*}
-	\left \langle \period \right \rangle &=  \frac{1}{ N_\text{corr} } \sum_{G\in S_\text{corr}}    \period(G) = \frac{1}{ N_\text{corr}  } \sum_{G\in S} \rho(G) \abs{\Aut(G)}  \period(G) = \left( \frac{N}{\sum_{g\in S}\abs{\Aut(g)}} \right) \left \langle \abs{\Aut } \cdot \period  \right \rangle _\rho.
+	\left \langle \period \right \rangle &=  \frac{1}{ N_\text{corr} } \sum_{G\in S_\text{corr}}    \period(G)\\ &= \frac{1}{ N_\text{corr}  } \sum_{G\in S} \rho(G) \abs{\Aut(G)}  \period(G)\\ &= \left( \frac{N}{\sum_{g\in S}\abs{\Aut(g)}} \right) \left \langle \abs{\Aut } \cdot \period  \right \rangle _\rho.
 \end{align*}
 Using
 \begin{align*}
@@ -2523,7 +2576,7 @@ We need to estimate $\sqrt{\bar C_2}$ from a finite sample. The naive sample var
 \end{align*}
 but products of sample moments with individual sample elements are biased,
 \begin{align*}
-	\mathbb E \left( x_i^l \left \langle X_n^j \right \rangle   \right) &= \mathbb E \left( x_i^l \frac 1 n \sum_{k=1}^n x_k^j \right) = \mathbb E \left(  \frac 1 n \sum_{k \neq i} x_i^l x_k^j +\frac 1 n x_i^{j+l}\right) = \frac{n-1}{n} \bar M_l \bar M_j + \frac 1 n \bar M_{j+l}.
+	\mathbb E \left( x_i^l \left \langle X_n^j \right \rangle   \right) &= \mathbb E \left( x_i^l \frac 1 n \sum_{k=1}^n x_k^j \right) \\&= \mathbb E \left(  \frac 1 n \sum_{k \neq i} x_i^l x_k^j +\frac 1 n x_i^{j+l}\right)\\& = \frac{n-1}{n} \bar M_l \bar M_j + \frac 1 n \bar M_{j+l}.
 \end{align*}
 This implies that the expectation of the sample variance contains  a non-trivial factor,
 \begin{align*}
@@ -2538,7 +2591,7 @@ The sample moments reported in the paper contain these corrections, but the infl
 
 The sample variance \cref{def:sample_variance} is itself a random variable, its value depends on the particular sample, while the population variance $\bar C_2$ is a constant. This implies that powers of the variance, such as the standard deviation or the denominators in \cref{def:skewness_kurtosis}, are generally not equal to (the expectation of) the same powers of the sample variance. The necessary correction factors are known analytically if $X$ is a normal distribution \cite{holtzman_unbiased_1950}. To find them for arbitrary distributions, rewrite the sample variance as
 \begin{align*}
-	C_2(X_n)^r &= \bar C_2 ^r \left( \frac{  C_2(X_n)}{\bar C_2 } \right) ^r =  \bar C_2 ^r  \left(  1 + \frac{  C_2(X_n) -\bar C_2 }{\bar C_2 } \right) =\bar C_2^r \sum_{k=0}^\infty  \binom r k \frac{1}{\bar C_2^k} \left( C_2(X_n)-\bar C_2 \right) ^k.
+	C_2(X_n)^r &= \bar C_2 ^r \left( \frac{  C_2(X_n)}{\bar C_2 } \right) ^r \\ &=  \bar C_2 ^r  \left(  1 + \frac{  C_2(X_n) -\bar C_2 }{\bar C_2 } \right)\\ & =\bar C_2^r \sum_{k=0}^\infty  \binom r k \frac{1}{\bar C_2^k} \left( C_2(X_n)-\bar C_2 \right) ^k.
 \end{align*}
 Consequently, the expectation of $C_2(X_n)^r$ is a power series  of its $k$\textsuperscript{th} central moments,
 \begin{align*}
@@ -2630,7 +2683,7 @@ A third type of uncertainty can arise if the sampling itself is not uniform, for
 
 The procedure for combining multiple numerical values of \emph{the same} period (that is, graphs which are either isomorphic or related by a known period symmetry) is similar to a sample mean, but the individual contributions are weighted with factors $w_j$:
 \begin{align*} 
-	\bar \period  &=  \left( \sum \nolimits_{j=1}^n w_j \right) ^{-1}\cdot \sum \nolimits_{j=1}^n w_j\period(G_j), \qquad \Delta \bar \period = \left( \sum \nolimits_{j=1}^n w_j \right) ^{-1}\cdot \sqrt{\sum \nolimits_{j=1}^n ( w_j\Delta \period(G_j))^2}.
+	\bar \period  &=  \left( \sum \nolimits_{j=1}^n w_j \right) ^{-1}\cdot \sum \nolimits_{j=1}^n w_j\period(G_j)\\ \Delta \bar \period &= \left( \sum \nolimits_{j=1}^n w_j \right) ^{-1}\cdot \sqrt{\sum \nolimits_{j=1}^n ( w_j\Delta \period(G_j))^2}.
 \end{align*}
 In principle, we can freely chose the $w_j$. The uncertainty of the average is minimized by choosing  $w_i:= (\Delta \period(G_j))^{-2}$. With this choice, the  estimate and uncertainty are 
 \begin{align}\label{weighted_average} 
