--- a/2305.13506/jheppub.sty
+++ b/2305.13506/jheppub.sty
@@ -230,7 +230,7 @@
 \ifnotoc\else
 \iftoccontinuous\else\newpage\fi
 \beforetochook\hrule
-\tableofcontents
+%\tableofcontents
 \afterTocSpace
 \hrule
 \afterTocRuleSpace
@@ -267,19 +267,6 @@
 \setlength\textheight{\@tempcnta\baselineskip}
 \addtolength\textheight{\topskip}
 
-\voffset -1in
-\topmargin   .05\paperheight
-\headheight  .02\paperheight
-\headsep     .03\paperheight
-\footskip    .07\paperheight
-
-\marginparsep 9\p@
-\marginparpush 6\p@
-
-\hoffset -1in
-\oddsidemargin .14\paperwidth
-\evensidemargin .14\paperwidth
-\marginparwidth .11\paperwidth
 
 \setlength\arraycolsep{2\p@}
 \setlength\tabcolsep{6\p@}
