--- a/2404.01256/countable-reals.tex
+++ b/2404.01256/countable-reals.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{amsart}
+\documentclass[12pt]{amsart}
 
 % For e-reader, small margins
 %\usepackage[margin=5mm]{geometry}
@@ -18,7 +18,7 @@
 \usepackage{amsaddr} % place author info on the first page
 
 % I am not sure about all these fonts (Andrej)
-\usepackage[scaled=.97,helvratio=.93,p,theoremfont]{newpxtext} % Serif palatino font
+\usepackage[helvratio=.93,p,theoremfont]{newpxtext} % Serif palatino font
 \usepackage[vvarbb,smallerops,bigdelims]{newpxmath} % Math palatino font
 \usepackage[scaled=.85]{beramono} % Monospace font
 \usepackage[scr=rsfso,cal=boondoxo]{mathalfa} % Mathcal from STIX, unslanted a bit
@@ -34,6 +34,48 @@
 \usepackage{xypic}
 \usepackage{xcolor}
 \usepackage[shortlabels]{enumitem}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 %%% Theorem-like environments
 {\theoremstyle{plain}
