--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,51 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-02-27 07:15:40 -0500 
+%% Created for Pete Su at 2024-04-05 07:47:39 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Padmanabhan2016,
+	author = {Padmanabhan, Thanu},
+	date-added = {2024-04-05 07:46:26 -0400},
+	date-modified = {2024-04-05 07:46:31 -0400},
+	doi = {10.1007/978-3-319-28173-5},
+	isbn = {9783319281735},
+	issn = {1868-4521},
+	journal = {Graduate Texts in Physics},
+	publisher = {Springer International Publishing},
+	title = {Quantum Field Theory},
+	url = {http://dx.doi.org/10.1007/978-3-319-28173-5},
+	year = {2016},
+	bdsk-url-1 = {http://dx.doi.org/10.1007/978-3-319-28173-5}}
+
+@book{MTW2017,
+	author = {Misner, C.W. and Thorne, K.S. and Wheeler, J.A. and Kaiser, D.I.},
+	date-added = {2024-04-05 07:42:51 -0400},
+	date-modified = {2024-04-05 07:45:31 -0400},
+	isbn = {9780691177793},
+	lccn = {2017950565},
+	note = {Reprint},
+	publisher = {Princeton University Press},
+	title = {Gravitation},
+	url = {https://books.google.com/books?id=SyQzDwAAQBAJ},
+	year = {2017},
+	bdsk-url-1 = {https://books.google.com/books?id=SyQzDwAAQBAJ}}
+
+@book{MTW1973,
+	author = {Misner, C.W. and Thorne, K.S. and Wheeler, J.A.},
+	date-added = {2024-04-05 07:41:41 -0400},
+	date-modified = {2024-04-05 07:45:19 -0400},
+	isbn = {9780716703440},
+	lccn = {78156043},
+	publisher = {W. H. Freeman},
+	title = {Gravitation},
+	url = {https://books.google.com/books?id=w4Gigq3tY1kC},
+	year = {1973},
+	bdsk-url-1 = {https://books.google.com/books?id=w4Gigq3tY1kC}}
 
 @article{Gisin2023,
 	author = {Gisin, Nicolas and Del Santo, Flavio},
