--- a/1112.0347/main.tex
+++ b/1112.0347/main.tex
@@ -5,7 +5,7 @@
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[noBBpl,sc]{mathpazo}
-\usepackage{eulervm}
+%\usepackage{eulervm}
 \usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
 \linespread{1.1}
 \sloppy
