--- a/1112.0347/mymacros.tex
+++ b/1112.0347/mymacros.tex
@@ -8,8 +8,8 @@
 \newcommand{\proof}{\noindent {\sc Proof.}}
 \newcommand{\qed}{\rule{2mm}{4mm}}
 \newcommand{\consistent}{\bigtriangleup}
-\newcommand{\true}{{\sl t}}
-\newcommand{\false}{{\sl f}}	
+\newcommand{\true}{\text{\sl t}}
+\newcommand{\false}{\text{\sl f}}	
 \newcommand{\lsem}{[ \! [}
 \newcommand{\rsem}{] \! ]}
 \newcommand{\lsing}{\{ \! |}
